--- a/css/style12.css
+++ b/css/style12.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Asap&family=Dancing+Script:wght@700&family=Kalam:wght@700&family=Libre+Baskerville&family=Lilita+One&family=Montserrat:ital,wght@1,400;1,700&family=Mulish:ital,wght@1,400;1,600;1,700&family=MuseoModerno:wght@700&family=Open+Sans&family=Poppins:ital,wght@0,300;0,500;0,700;1,300;1,700&family=Roboto:ital,wght@1,400;1,700&display=swap');
-
 *{
     margin:0;
     padding:0;
@@ -81,7 +80,6 @@ footer{
     display:flex;
     justify-content:space-around;
     height:300px;
-    width:100%;
 
 }
 
@@ -168,20 +166,6 @@ h3{
    margin-right:150px;
     
 }
-
-.detalles{
-   display:flex;
-   justify-content:space-around;
-    width:1000px;
-
-   
-    margin:auto;
-}
-
-.detalles img{
-width:100px;
-}
-
 
 section{
     position:sticky;
@@ -357,7 +341,7 @@ button:hover{
     
 }
 
-.compra{
+.Accesorios{
     display:inline;
     font-weight:bold;
 }
@@ -370,93 +354,76 @@ button:hover{
     text-decoration:underline;
 }
 
-.imagen1{
-    width:100%;
+.registrarse img{
+    margin-left:5px;
+    margin-right:15px;
+    width:35px;
+    height:35px;
+}
+
+.registrarse img:hover{
+    content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+    opacity:75%;
+}
+
+
+#productimg{
+    display:flex;
+    justify-content:flex-end;
+    width:1500px;
+    height:800px;
+}
+
+#productimg img{
+    width:650px;
     height:650px;
+
+}
+
+#productimg img:hover{
+
+    
+    content: url(../assets/imagenes/222222.webp);
+
+}
+
+h5{
+    font-size: 30px;
+    font-weight:bold;
+    color:#FD5D9D;
+    margin-bottom:65px;
+    
+    
+
+}
+
+#productimg p{
+    font-size:30px;
+}
+
+#productimg button{
+    width:300px;
+    height:45px;
+    font-size:19px;
+    margin-bottom:165px;
+    margin-top:60px;
+    
+}
+
+#detailscoral{
+    margin-left:40px;
+}
+
+#detailscoral input[type=text]{
+    width:300px;
+    height:42px;
+}
+
+#Description{
     display:flex;
-    justify-content:space-between;
-    background-color:#f5beef;
-
+    justify-content:space-around;
+ 
 }
-
-.left{
-    width:60px;
-    margin-top:300px;
-}
-
-.right{
-    width:60px;
-    margin-top:300px;
-}
-
-.imagen1 p{
-    margin-top:300px;
-}
-
-
-#Categoriass{
-    display:flex;
-    justify-content:space-arround;
-
-}
-
-#fotoCategoria{
-    width:600px;
-    height:300px;
-    background-color:rgb(158, 154, 154);
-    margin-right:20px;
-  
-    
-    
-}
-
-#fotoCategoria img:hover{
-    border:1px solid black;
-}
-
-#fotoCategoria img{
-    width:600px;
-    height:300px;
-}
-
-
-
-#fotoCategoria2{
-    width:600px;
-    height:300px;
-    background-color:rgb(158, 154, 154);
-    margin-right:20px;
-}
-#fotoCategoria2 img{
-    width:600px;
-    height:300px;
-}
-
-#fotoCategoria2 img:hover{
-    border:1px solid black;
-}
-
-#fotoCategoria3{
-    width:600px;
-    height:300px;
-    background-color:rgb(158, 154, 154);
-    
-   
-    
-    
-    
-}
-
-#fotoCategoria3 img{
-    width:600px;
-    height:300px;
-}
-
-
-#fotoCategoria3 img:hover{
-    border:1px solid black;
-}
-
 #producto1{
     width:450px;
     height:520px;
@@ -520,183 +487,3 @@ button:hover{
     height:520px;
 
 }
-
-#fotoProducto2{
-    display:flex;
-    justify-content:space-arround;
-    margin-bottom: 30px;
-}
-
-#fotoProducto2 img:hover{
-    border:1px solid black;
-}
-
-#producto4{
-    width:450px;
-    height:520px;
-    margin-left:80px;
-   
-   
-   
-}
-
-#producto4 img{
-    width:450px;
-    height:520px;
-    
-    
-}
-
-
-#producto5{
-    width:450px;
-    height:520px;
-    margin-left:150px;
-   
-    
-}
-
-#producto5 img{
-    width:450px;
-    height:520px;
-}
-
-#producto6{
-    width:450px;
-    height:520px;
-    margin-left:180px;
-
-   
-
-}
-
-#producto6 img{
-    width:450px;
-    height:520px;
-}
-
-    
-
-
-
-
-
-
-#verProductos{
-    width:300px;
-    margin-left:42%;
-    background-color:black;
-    color:white;
-    
-
-}
-
-#verProductos:hover{
-background-color:#FD5D9D;
-color:white;
-
-
-
-}
-
-.registrarse img{
-    margin-left:5px;
-    margin-right:15px;
-    width:35px;
-    height:35px;
-}
-
-.registrarse img:hover{
-    content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
-    opacity:75%;
-}
-
-
-
-@media(max-width:576px){
-    section{
-        display: flex;
-        flex-direction:column;
-          width: 100%;
-        font-size:14px;
-    
-    }
-     
-    h1,h2,h3,h4{
-        display:flex;
-        flex-direction:column;
-
-    }
-
-    nav{
-        display:flex;
-        flex-direction:column;
-    }
-    p{
-        text-align:justify;
-
-    }
-    div{
-        display: flex;
-        flex-direction:column;
-        width:100%;
-        font-size:14px;
-    }
-
-    img{
-        width:50px;
-        height:50px;
-        display: flex;
-        flex-direction:column;
-        margin-left:0;
-    }
-    article{
-        display: flex;
-        flex-direction:column;
-        width:100%;
-        font-size:14px;
-    
-    }
-
-    footer{
-        display:flex;
-        flex-direction:column;
-        width:100%;
-        font-size:12px;
-        
-    }
-
-    footer img{
-        width:20px;
-        height:20px;
-    }
-
-    footer div{
-        display:flex;
-        flex-direction:column;
-        width:100%;
-    }
-
-    header {
-        display:flex;
-        flex-direction:column;
-        width:100vw;
-    }
-    
-    .pagos{
-        display:flex;
-        flex-direction:column;
-    }
-
-    body{
-        display:flex;
-        flex-direction:column;
-    }
-}
-
-@media(max-width:800px){
-    newsletter{
-    margin-left:50%;
-    }
-}
-
