--- a/css/style12.css
+++ b/css/style12.css
@@ -441,6 +441,7 @@ h5{
   
 }
 
+
 #fotoProducto{
     display:flex;
     justify-content:space-arround;
@@ -451,6 +452,10 @@ h5{
     border:1px solid black;
 }
 
+
+#fotoProducto p{
+text-align:center;
+}
 .infoProducto {
     display:flex;
     justify-content:space-around;
@@ -487,3 +492,4 @@ h5{
     height:520px;
 
 }
+
