--- a/css/style13.css
+++ b/css/style13.css
@@ -448,6 +448,10 @@ h5{
     border:1px solid black;
 }
 
+#fotoProducto p{
+    text-align:center;
+}
+
 .infoProducto {
     display:flex;
     justify-content:space-around;
