--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ nav a{
 
 a:hover{
     color:#F07BE4;
+    font-size:20px;
     
 }
 
@@ -214,8 +215,10 @@ section{
 .registrarse a:hover{
     color:#F07BE4; ;
     text-decoration:underline#F07BE4; 
+    font-size:18px;
     
 }
+
 
 .pagos img{
 width:50px;
@@ -616,7 +619,7 @@ color:white;
 }
 
 .registrarse img:hover{
-    content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+    content: url(../assets/imagenes/bolsacompras2.png);
     opacity:75%;
 }
 
