--- a/css/style12.css
+++ b/css/style12.css
@@ -63,6 +63,7 @@ nav a{
 
 a:hover{
     color:#F07BE4;
+    font-size:20px;
     
 }
 
@@ -198,6 +199,7 @@ section{
 .registrarse a:hover{
     color:#F07BE4; ;
     text-decoration:underline#F07BE4; 
+    font-size:18px;
     
 }
 
@@ -383,7 +385,7 @@ button:hover{
 #productimg img:hover{
 
     
-    content: url(../assets/imagenes/222222.webp);
+    content: url(../assets/imagenes/carterarosa2.webp);
 
 }
 
