--- a/css/style5.css
+++ b/css/style5.css
@@ -59,6 +59,7 @@ scroll-behavior: smooth;
     
     a:hover{
         color:#F07BE4;
+        font-size:20px;
         
     }
     
@@ -102,6 +103,7 @@ scroll-behavior: smooth;
     .registrarse a:hover{
         color:#F07BE4; ;
         text-decoration:underline#F07BE4; 
+        font-size:18px;
         
     }
 
@@ -429,6 +431,6 @@ footer img{
     }
     
     .registrarse img:hover{
-        content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+        content: url(../assets/imagenes/bolsacompras2.png);
         opacity:75%;
     }
