--- a/css/style9.css
+++ b/css/style9.css
@@ -63,7 +63,7 @@ nav a{
 
 a:hover{
     color:#F07BE4;
-    
+    font-size:20px;
 }
 
 a:visited{
@@ -198,6 +198,7 @@ section{
 .registrarse a:hover{
     color:#F07BE4; ;
     text-decoration:underline#F07BE4; 
+    font-size:18px;
     
 }
 
@@ -362,6 +363,6 @@ button:hover{
 }
 
 .registrarse img:hover{
-    content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+    content: url(../assets/imagenes/bolsacompras2.png);
     opacity:75%;
 }
