--- a/css/style14.css
+++ b/css/style14.css
@@ -63,6 +63,7 @@ nav a{
 
 a:hover{
     color:#F07BE4;
+    font-size:20px;
     
 }
 
@@ -198,6 +199,7 @@ section{
 .registrarse a:hover{
     color:#F07BE4; ;
     text-decoration:underline#F07BE4; 
+    font-size:18px;
     
 }
 
@@ -362,7 +364,7 @@ button:hover{
 }
 
 .registrarse img:hover{
-    content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+    content: url(../assets/imagenes/bolsacompras2.png);
     opacity:75%;
 }
 
@@ -381,7 +383,7 @@ button:hover{
 }
 
 #productimg img:hover{
-    content:url(../assets/imagenes/3333333.jpg);
+    content:url(../assets/imagenes/mochilanegra2.jpg);
 }
 
 h5{
@@ -431,7 +433,9 @@ h5{
     
     
 }
-
+#fotoProducto p{
+    text-align:center;
+}
 #producto1 img{
     width:450px;
     height:520px;
