--- a/css/style6.css
+++ b/css/style6.css
@@ -57,6 +57,7 @@ scroll-behavior: smooth;
     
     a:hover{
         color:#F07BE4;
+        font-size:20px;
         
     }
     
@@ -100,6 +101,7 @@ scroll-behavior: smooth;
     .registrarse a:hover{
         color:#F07BE4; ;
         text-decoration:underline#F07BE4; 
+        font-size:18px;
         
     }
     h3{
@@ -397,6 +399,6 @@ h4{
 }
 
 .registrarse img:hover{
-    content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+    content: url(../assets/imagenes/bolsacompras2.png);
     opacity:75%;
 }
