--- a/css/style7.css
+++ b/css/style7.css
@@ -65,6 +65,7 @@ scroll-behavior: smooth;
     
     a:hover{
         color:#F07BE4;
+        font-size:20px;
         
     }
     
@@ -108,6 +109,7 @@ scroll-behavior: smooth;
     .registrarse a:hover{
         color:#F07BE4; ;
         text-decoration:underline#F07BE4; 
+        font-size:18px;
         
     }
 
@@ -354,6 +356,6 @@ footer p{
         }
         
         .registrarse img:hover{
-            content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+            content: url(../assets/imagenes/bolsacompras2.png);
             opacity:75%;
         }
