--- a/css/style8.css
+++ b/css/style8.css
@@ -67,6 +67,7 @@ scroll-behavior: smooth;
     
     a:hover{
         color:#F07BE4;
+        font-size:20px;
         
     }
     
@@ -110,6 +111,7 @@ scroll-behavior: smooth;
     .registrarse a:hover{
         color:#F07BE4; ;
         text-decoration:underline#F07BE4; 
+        font-size:18px;
         
     }
 
@@ -356,6 +358,6 @@ footer p{
         }
         
         .registrarse img:hover{
-            content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+            content: url(../assets/imagenes/bolsacompras2.png);
             opacity:75%;
         }
