--- a/css/style12.css
+++ b/css/style12.css
@@ -93,7 +93,8 @@ footer a{
 
 footer a:hover{
     color:#F07BE4;
-    text-decoration:underline #F07BE4; 
+    text-decoration:underline #F07BE4;
+    font-size:16px; 
 
 }
 
@@ -364,7 +365,7 @@ button:hover{
 }
 
 .registrarse img:hover{
-    content: url(../assets/imagenes/shopping-bag-svgrepo-com\ \(3\).svg);
+    content: url(../assets/imagenes/bolsacompras2.png);
     opacity:75%;
 }
 
