--- a/css/style2.css
+++ b/css/style2.css
@@ -156,6 +156,7 @@ scroll-behavior: smooth;
     footer a:hover{
         color:#F07BE4;
         text-decoration:underline #F07BE4; 
+        font-size:16px;
     
     }
     
