--- a/css/style3.css
+++ b/css/style3.css
@@ -155,6 +155,7 @@ scroll-behavior: smooth;
     footer a:hover{
         color:#F07BE4;
         text-decoration:underline #F07BE4; 
+        font-size:16px;
     
     }
     
