--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ footer{
     justify-content:space-around;
     height:300px;
     width:100%;
+   
 
 }
 
@@ -90,6 +91,8 @@ footer a{
     color:white;
     font-size:14px;
     text-decoration:none;
+    
+    
     
 }
 
@@ -104,8 +107,12 @@ footer a:hover{
 footer p{
     color:white;
     font-size:14px;
+    
 }
 
+footer li{
+    list-style:none;
+}
 footer img{
     width:20px;
     
@@ -406,10 +413,12 @@ button:hover{
 }
 
 #fotoCategoria{
-    width:600px;
-    height:300px;
+    width:400px;
+    height:500px;
     background-color:rgb(158, 154, 154);
-    margin-right:20px;
+    margin-right:30px;
+    margin-left:15%;
+    margin-top:30px;
   
     
     
@@ -420,31 +429,51 @@ button:hover{
 }
 
 #fotoCategoria img{
-    width:600px;
-    height:300px;
+    width:400px;
+    height:500px;
 }
 
-
-
+#fotoCategoria a:hover{
+    text-decoration:underline;
+    color:#FD5D9D;
+    font-size:20px;
+}
+#fotoCategoria a{
+    text-decoration:none;
+    color:#FD5D9D;
+    font-size:20px;
+}
 #fotoCategoria2{
-    width:600px;
-    height:300px;
+    width:400px;
+    height:500px;
     background-color:rgb(158, 154, 154);
-    margin-right:20px;
+    margin-right:30px;
+    margin-top:30px;
+}
+
+#fotoCategoria2 a{
+    text-decoration:none;
+    color:#FD5D9D;
+    font-size:20px;
 }
 #fotoCategoria2 img{
-    width:600px;
-    height:300px;
+    width:400px;
+    height:500px;
 }
 
 #fotoCategoria2 img:hover{
     border:1px solid black;
 }
-
+#fotoCategoria2 a:hover{
+    text-decoration:underline;
+    color:#FD5D9D;
+    font-size:20px;
+}
 #fotoCategoria3{
-    width:600px;
-    height:300px;
+    width:400px;
+    height:500px;
     background-color:rgb(158, 154, 154);
+    margin-top:30px;
     
    
     
@@ -452,9 +481,20 @@ button:hover{
     
 }
 
+
 #fotoCategoria3 img{
-    width:600px;
-    height:300px;
+    width:400px;
+    height:500px;
+}
+#fotoCategoria3 a:hover{
+    text-decoration:underline;
+    color:#FD5D9D;
+    font-size:20px;
+}
+#fotoCategoria3 a{
+    text-decoration:none;
+    color:#FD5D9D;
+    font-size:20px;
 }
 
 
@@ -675,4 +715,20 @@ color:white;
     font-size:20px;
     font-weight:bold;
 color:#FD5D9D;
+}
+
+.perfumeCarrusel{
+    width:100%;
+   height:20%;
+
+}
+
+.zapatoCarrusel{
+    width:100%;
+    height:20%;
+}
+
+.foto3-carrusel{
+    width:100%;
+    height:20%;
 }
