--- a/css/style5.css
+++ b/css/style5.css
@@ -214,6 +214,7 @@ footer p{
 
 
     .formulario{
+       
         display:block;
         width:1020px;
         
@@ -228,7 +229,7 @@ footer p{
       
       
     }
-
+    
     .formulario input{
         display:inline-block;
         width:950px;
@@ -288,7 +289,14 @@ height:300px;
     background-color:black;
     font-size:20px;
    }
+    
+   .formulario input[required]:valid{
+    border:thin solid green;
+   }
 
+   .formulario input[required]:invalid{
+    border:thin solid red;
+   }
 
    .formulario input[type="reset"]:hover{
     color:white;
@@ -309,11 +317,12 @@ height:300px;
     color:red;
    }
 
-   .formulario h2{
+   .formulario legend{
     color:#A79EC8;
     margin-top:5px;
     margin-bottom:10px;
     margin-right:700px;
+    font-size:18px;
 
    }
 
@@ -486,3 +495,7 @@ footer img{
         font-weight:bold;
     color:#FD5D9D;
     }
+
+.contact-form-response-none{
+    display:none;
+}
