--- a/css/style2.css
+++ b/css/style2.css
@@ -324,7 +324,13 @@ scroll-behavior: smooth;
     #inicio:hover{
         text-decoration:underline;
     }
+    
 
+    #Categoria3{
+        width:180px;
+        height:160px;
+        background-color:rgb(252, 203, 237);
+    }
     #Categoria3 a{
         color:black;
         text-decoration:none;
