--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,7 @@ width:300px;
 height:40px;
 border-radius:0.4rem;
 border:1.9px solid black;
-font-size:16px;
+
 
         
 }
@@ -431,6 +431,7 @@ button:hover{
 
 #fotoCategoria img:hover{
     border:1px solid black;
+    opacity:75%;
 }
 
 #fotoCategoria img{
@@ -438,16 +439,9 @@ button:hover{
     height:500px;
 }
 
-#fotoCategoria a:hover{
-    text-decoration:underline;
-    color:#FD5D9D;
-    font-size:20px;
-}
-#fotoCategoria a{
-    text-decoration:none;
-    color:#FD5D9D;
-    font-size:20px;
-}
+
+
+
 #fotoCategoria2{
     width:400px;
     height:500px;
@@ -456,11 +450,7 @@ button:hover{
     margin-top:30px;
 }
 
-#fotoCategoria2 a{
-    text-decoration:none;
-    color:#FD5D9D;
-    font-size:20px;
-}
+
 #fotoCategoria2 img{
     width:400px;
     height:500px;
@@ -468,12 +458,9 @@ button:hover{
 
 #fotoCategoria2 img:hover{
     border:1px solid black;
+    opacity:75%;
 }
-#fotoCategoria2 a:hover{
-    text-decoration:underline;
-    color:#FD5D9D;
-    font-size:20px;
-}
+
 #fotoCategoria3{
     width:400px;
     height:500px;
@@ -491,20 +478,13 @@ button:hover{
     width:400px;
     height:500px;
 }
-#fotoCategoria3 a:hover{
-    text-decoration:underline;
-    color:#FD5D9D;
-    font-size:20px;
-}
-#fotoCategoria3 a{
-    text-decoration:none;
-    color:#FD5D9D;
-    font-size:20px;
-}
+
+
 
 
 #fotoCategoria3 img:hover{
     border:1px solid black;
+    opacity:75%;
 }
 
 #producto1{
@@ -737,3 +717,4 @@ color:#FD5D9D;
     width:100%;
     height:20%;
 }
+
