--- a/css/style.css
+++ b/css/style.css
@@ -682,6 +682,39 @@ color:white;
    
 
 }
+#menu-horizontal{
+    list-style:none;
+    display:flex;
+    justify-content:space-around;
+
+}
+
+#menu-horizontal >li>a{
+display:block;
+padding:15px 20px;
+text-decoration:none;
+
+}
+
+#menu-vertical{
+position:absolute;
+display:none;
+list-style:none;
+margin-top:-10px;
+width:170px;
+font-weight:bold;
+background-color:#FCCBED;
+
+
+}
+#menu-vertical a:hover{
+    font-size:14px;
+}
+
+#menu-horizontal li:hover #menu-vertical{
+display:block;
+
+}
 
 #detalle-compra h2{
     font-size:24px;
