--- a/css/style11.css
+++ b/css/style11.css
@@ -482,3 +482,37 @@ color:#FD5D9D;
     margin-left:0;
   
 }
+#menu-horizontal{
+    list-style:none;
+    display:flex;
+    justify-content:space-around;
+
+}
+
+#menu-horizontal >li>a{
+display:block;
+padding:15px 20px;
+text-decoration:none;
+
+}
+
+#menu-vertical{
+position:absolute;
+display:none;
+list-style:none;
+margin-top:-10px;
+width:170px;
+font-weight:bold;
+background-color:#FCCBED;
+font-size:15px;
+
+
+}
+#menu-vertical a:hover{
+    font-size:15px;
+}
+
+#menu-horizontal li:hover #menu-vertical{
+display:block;
+
+}
