--- a/css/style13.css
+++ b/css/style13.css
@@ -543,3 +543,72 @@ h5{
     font-weight:bold;
 color:#FD5D9D;
 }
+
+#menu-horizontal{
+    list-style:none;
+    display:flex;
+    justify-content:space-around;
+
+}
+
+#menu-horizontal >li>a{
+display:block;
+padding:15px 20px;
+text-decoration:none;
+
+}
+
+#menu-vertical{
+position:absolute;
+display:none;
+list-style:none;
+margin-top:-10px;
+width:170px;
+font-weight:bold;
+background-color:#FCCBED;
+
+
+}
+#menu-vertical a:hover{
+    font-size:16px;
+}
+
+#menu-horizontal li:hover #menu-vertical{
+display:block;
+
+}
+
+#menu-horizontal{
+    list-style:none;
+    display:flex;
+    justify-content:space-around;
+
+}
+
+#menu-horizontal >li>a{
+display:block;
+padding:15px 20px;
+text-decoration:none;
+
+}
+
+#menu-vertical{
+position:absolute;
+display:none;
+list-style:none;
+margin-top:-10px;
+width:170px;
+font-weight:bold;
+background-color:#FCCBED;
+font-size:15px;
+
+
+}
+#menu-vertical a:hover{
+    font-size:15px;
+}
+
+#menu-horizontal li:hover #menu-vertical{
+display:block;
+
+}
