--- a/css/style4.css
+++ b/css/style4.css
@@ -450,3 +450,38 @@ scroll-behavior: smooth;
        margin-left:126px;
         
     }
+
+    #menu-horizontal{
+        list-style:none;
+        display:flex;
+        justify-content:space-around;
+    
+    }
+    
+    #menu-horizontal >li>a{
+    display:block;
+    padding:15px 20px;
+    text-decoration:none;
+    
+    }
+    
+    #menu-vertical{
+    position:absolute;
+    display:none;
+    list-style:none;
+    margin-top:-10px;
+    width:170px;
+    font-weight:bold;
+    background-color:#FCCBED;
+    font-size:15px;
+    
+    
+    }
+    #menu-vertical a:hover{
+        font-size:15px;
+    }
+    
+    #menu-horizontal li:hover #menu-vertical{
+    display:block;
+    
+    }
